# starGen

./: .gitignore  LICENSE  README.md  config.cfg  generate_submission.py  pyproject.toml  run_star.sh
.github/workflows/: python-ci.yml
starGen/: cli.py  config.py  featurecounts.py  generator.py  init.py  qc.py
starGen/scripts/: run_star.sh
tests/: test_cli.py  test_generate.py  test_qc.py
